#set(DOUBLE_CONVERSION_SOURCE_FILES
#        bignum-dtoa.cc
#        bignum.cc
#        cached-powers.cc
#        diy-fp.cc
#        double-conversion.cc
#        fast-dtoa.cc
#        fixed-dtoa.cc
#        strtod.cc
#        )
#
#add_library(double-conversion OBJECT ${DOUBLE_CONVERSION_SOURCE_FILES})

# built from decoder/CMakeLists.txt
